commit translated contents

--- a/docs/visual-basic/misc/bc30246.md
+++ b/docs/visual-basic/misc/bc30246.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in una dichiarazione di costante locale"
+title: "' <modifier> ' non valido in una dichiarazione di costante locale"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30246
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30246
 ms.assetid: 1a4a8570-2f04-4a8f-a110-47d97448fb7a
-ms.openlocfilehash: 4d40565e78ebf8016955ee0077803483d16765b4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 07b4b23645d5bffcaa03255f3323f8b29458106e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61766662"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359179"
 ---
-# <a name="modifier-is-not-valid-on-a-local-constant-declaration"></a>'\<modificatore >' non è valido in una dichiarazione di costante locale
+# <a name="modifier-is-not-valid-on-a-local-constant-declaration"></a>' \<modifier> ' non valido in una dichiarazione di costante locale
 Un'istruzione `Const` all'interno di una routine contiene una parola chiave non valida, ad esempio `Overloads`.  
   
  **ID errore:** BC30246  
@@ -25,4 +25,4 @@ Un'istruzione `Const` all'interno di una routine contiene una parola chiave non 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Const](../../visual-basic/language-reference/statements/const-statement.md)
+- [Istruzione Const](../language-reference/statements/const-statement.md)
