--- a/docs/visual-basic/misc/bc30818.md
+++ b/docs/visual-basic/misc/bc30818.md
@@ -1,5 +1,5 @@
 ---
-title: "'<function>' non è dichiarato"
+title: "' <function> ' non è dichiarato"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30818
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30818
 ms.assetid: 5bf784f1-ba14-4fad-aa10-e57256102fb3
-ms.openlocfilehash: 1f053628b98b7ceb2f51ac29714abf0c57f11a5e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 76e7d2d1d958a15cdb19fa0fad198c19224ed9ce
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632435"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408354"
 ---
-# <a name="function-is-not-declared"></a>'\<funzione >' non è dichiarato
-'\<funzione >' non è dichiarato. La funzione è stata spostata nello spazio dei nomi Microsoft.VisualBasic.  
+# <a name="function-is-not-declared"></a>' \<function> ' non è dichiarato
+'\<function>' non è dichiarato. La funzione è stata spostata nello spazio dei nomi Microsoft.VisualBasic.  
   
  **ID errore:** BC30818  
   
@@ -25,4 +25,4 @@ ms.locfileid: "64632435"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Membri della libreria di runtime di Visual Basic](../../visual-basic/language-reference/runtime-library-members.md)
+- [Membri della libreria di runtime di Visual Basic](../language-reference/runtime-library-members.md)
