--- a/docs/visual-basic/misc/bc30944.md
+++ b/docs/visual-basic/misc/bc30944.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30944
 ms.assetid: 1f7ed4a1-6ff5-4836-8424-21618c68ff45
-ms.openlocfilehash: 559df483185948a8f407fc5c7c0846e6a588cd27
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5642dc1f0cf053ee057e121c7647a1a203c2909b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621867"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408971"
 ---
 # <a name="syntax-error-in-cast-operator-two-arguments-separated-by-comma-are-required"></a>Errore di sintassi nell'operatore di cast: sono necessari due argomenti separati da virgola
 Un'espressione usa la funzione di conversione `CType` o la parola chiave di conversione `DirectCast` o `TryCast` , ma fornisce un solo argomento.  
@@ -25,11 +25,11 @@ Un'espressione usa la funzione di conversione `CType` o la parola chiave di conv
   
 - Fornire entrambi gli argomenti richiesti per la conversione.  
   
-- Per usare una delle specifiche [CString](../../visual-basic/language-reference/functions/type-conversion-functions.md) , come `CString`, è necessario usare il nome della funzione anziché `CType`. In questo caso è richiesto un solo argomento.  
+- Per usare una delle specifiche [CString](../language-reference/functions/type-conversion-functions.md) , come `CString`, è necessario usare il nome della funzione anziché `CType`. In questo caso è richiesto un solo argomento.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Funzione CType](../../visual-basic/language-reference/functions/ctype-function.md)
-- [Operatore DirectCast](../../visual-basic/language-reference/operators/directcast-operator.md)
-- [Operatore TryCast](../../visual-basic/language-reference/operators/trycast-operator.md)
-- [Funzioni di conversione del tipo](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [CType Function](../language-reference/functions/ctype-function.md)
+- [Operatore DirectCast](../language-reference/operators/directcast-operator.md)
+- [Operatore TryCast](../language-reference/operators/trycast-operator.md)
+- [CString](../language-reference/functions/type-conversion-functions.md)
