--- a/docs/visual-basic/misc/bc30107.md
+++ b/docs/visual-basic/misc/bc30107.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo Enum e non può essere usato come espressione"
+title: "' <typename> ' è un tipo enum e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30107
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30107
 ms.assetid: 7bd8b87d-85bf-44e5-84d4-ae6407d21c30
-ms.openlocfilehash: 25a6addde499d42ecd59d64b5ffb2aa90cdf7054
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b120ef515147fac7e4767781b87c071b2ad62c15
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642711"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359413"
 ---
-# <a name="typename-is-an-enum-type-and-cannot-be-used-as-an-expression"></a>'\<nomeTipo >' è un tipo Enum e non può essere usato come espressione
+# <a name="typename-is-an-enum-type-and-cannot-be-used-as-an-expression"></a>' \<typename> ' è un tipo enum e non può essere usato come espressione
 Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione. Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .  
   
  **ID errore:** BC30107  
@@ -25,4 +25,4 @@ Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori ed espressioni](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [Operatori ed espressioni](../programming-guide/language-features/operators-and-expressions/index.md)
