--- a/docs/visual-basic/misc/bc30135.md
+++ b/docs/visual-basic/misc/bc30135.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30135
 ms.assetid: 099771a1-5bf4-4c16-8fc3-262926c771df
-ms.openlocfilehash: a56fca1f774e111d6544052ef9135a4f621371f6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4c1311dc449c9ce19c9d8086c9348730ad655ec8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651402"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359335"
 ---
 # <a name="synclock-statements-are-not-valid-in-the-immediate-window"></a>Le istruzioni 'SyncLock' non sono valide nella finestra di controllo immediato
 L'istruzione `SyncLock` sincronizza i thread e non è consentita in un contesto di debug.  
@@ -26,4 +26,4 @@ L'istruzione `SyncLock` sincronizza i thread e non è consentita in un contesto 
 ## <a name="see-also"></a>Vedere anche
 
 - [Finestra di controllo immediato](/visualstudio/ide/reference/immediate-window)
-- [Istruzione SyncLock](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [Istruzione SyncLock](../language-reference/statements/synclock-statement.md)
