--- a/docs/visual-basic/misc/bc30244.md
+++ b/docs/visual-basic/misc/bc30244.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in Declare"
+title: "' <modifier> ' non è valido in una dichiarazione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30244
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30244
 ms.assetid: 31de75fc-2049-425e-bb94-75d99fc9fdf3
-ms.openlocfilehash: 0ebc6a2689ed731967864ed041d2ff9b46679268
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d4dce68214f0f320c289f6609e9ec9ad7e6eb79a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913426"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359166"
 ---
-# <a name="modifier-is-not-valid-on-a-declare"></a>'\<modificatore >' non è valido in Declare
+# <a name="modifier-is-not-valid-on-a-declare"></a>' \<modifier> ' non è valido in una dichiarazione
 Un'istruzione `Declare` contiene una parola chiave non valida, ad esempio `ReadOnly`.  
   
  **ID errore:** BC30244  
@@ -25,4 +25,4 @@ Un'istruzione `Declare` contiene una parola chiave non valida, ad esempio `ReadO
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Declare](../../visual-basic/language-reference/statements/declare-statement.md)
+- [Declare Statement](../language-reference/statements/declare-statement.md)
