--- a/docs/visual-basic/misc/bc30247.md
+++ b/docs/visual-basic/misc/bc30247.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in una dichiarazione di variabile locale"
+title: "' <modifier> ' non valido in una dichiarazione di variabile locale"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30247
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30247
 ms.assetid: 8c43503c-71a4-47d8-97f7-67658da774b1
-ms.openlocfilehash: 332ea1f83e6406a4ab40019fd150cc4189b2575b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f7728d6adb172088f74cc512d20aea56f1963daf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64598757"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359153"
 ---
-# <a name="modifier-is-not-valid-on-a-local-variable-declaration"></a>'\<modificatore >' non è valido in una dichiarazione di variabile locale
+# <a name="modifier-is-not-valid-on-a-local-variable-declaration"></a>' \<modifier> ' non valido in una dichiarazione di variabile locale
 Un'istruzione `Dim` all'interno di una routine contiene una parola chiave non valida, ad esempio `Overloads`.  
   
  **ID errore:** BC30247  
@@ -25,4 +25,4 @@ Un'istruzione `Dim` all'interno di una routine contiene una parola chiave non va
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
