--- a/docs/visual-basic/misc/bc30248.md
+++ b/docs/visual-basic/misc/bc30248.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30248
 ms.assetid: fa3bf591-8036-459c-8c29-ed7784e444f6
-ms.openlocfilehash: 14a9663776ced5d19beb4fbeebdee08b41db3af5
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e913f60edee9c4313c12b9dcfcbdb109b4248133
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027797"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359140"
 ---
 # <a name="if-elseif-else-end-if-or-const-expected"></a>Previsto 'If', 'ElseIf', 'Else', 'End If' o 'Const'
 Una riga di origine inizia con un carattere `#` , ma `#`non è seguito direttamente da una direttiva di compilazione condizionale valida. Le direttive valide includono `#Const`, `#ExternalSource`, `#If`, `#Else`, `#ElseIf`, `#End If`e `#Region`.  
@@ -29,4 +29,4 @@ Una riga di origine inizia con un carattere `#` , ma `#`non è seguito direttame
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Direttive](../../visual-basic/language-reference/directives/index.md)
+- [Direttive](../language-reference/directives/index.md)
