--- a/docs/visual-basic/misc/bc30518.md
+++ b/docs/visual-basic/misc/bc30518.md
@@ -1,5 +1,5 @@
 ---
-title: Non è riuscita perché la risoluzione dell'overload non accessibile '<method>' può essere chiamato con questi argomenti:<error>
+title: "Risoluzione dell'overload non riuscita perché nessun '<method>' accessibile può essere chiamato con questi argomenti: <error>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30518
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30518
 ms.assetid: 0c49fffa-f683-4550-a95b-68b0757a8bbb
-ms.openlocfilehash: e29acbe89efab88b87b91827918c37ae92b47c16
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5999df7e20297d50c10a240a92e4627c7178f645
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64644774"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358906"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-with-these-argumentserror"></a>Non è riuscita perché la risoluzione dell'overload non accessibile '\<metodo >' può essere chiamato con questi argomenti:\<errore >
+# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-with-these-argumentserror"></a>Risoluzione dell'overload non riuscita perché nessun '\<method>' accessibile può essere chiamato con questi argomenti: \<error>
 È stata effettuata una chiamata a un metodo di overload, ma il compilatore non riesce a trovare un metodo con un elenco di argomenti corrispondenti.  
   
  **ID errore:** BC30518  
@@ -25,4 +25,4 @@ ms.locfileid: "64644774"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi e proprietà di overload](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [Metodi e proprietà di overload](../programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
