--- a/docs/visual-basic/misc/bc30815.md
+++ b/docs/visual-basic/misc/bc30815.md
@@ -1,5 +1,5 @@
 ---
-title: "'<functionname>' non è dichiarato (errore Visual Basic)"
+title: "' <functionname> ' non è dichiarato (errore Visual Basic)"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30815
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30815
 ms.assetid: 3ae91dd4-567d-4101-951c-834be77c4f07
-ms.openlocfilehash: 531ce650a0e9fdd5cfcd8b566527069b7709a90b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be5c62713d9345d68cfa40784351b2e20356f3e2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632525"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408380"
 ---
-# <a name="functionname-is-not-declared-visual-basic-error"></a>'\<nomefunzione >' non è dichiarato (errore Visual Basic)
-'\<nomefunzione >' non è dichiarato. La funzionalità di I/O dei file è disponibile nello spazio dei nomi Microsoft.VisualBasic.  
+# <a name="functionname-is-not-declared-visual-basic-error"></a>' \<functionname> ' non è dichiarato (errore Visual Basic)
+'\<functionname>' non è dichiarato. La funzionalità di I/O dei file è disponibile nello spazio dei nomi Microsoft.VisualBasic.  
   
  **ID errore:** BC30815  
   
@@ -25,5 +25,5 @@ ms.locfileid: "64632525"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Accesso ai file con Visual Basic](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
-- [My.Computer.FileSystem](xref:Microsoft.VisualBasic.FileIO.FileSystem)
+- [Accesso ai file con Visual Basic](../developing-apps/programming/drives-directories-files/file-access.md)
+- [My. computer. FileSystem](xref:Microsoft.VisualBasic.FileIO.FileSystem)
