--- a/docs/visual-basic/misc/bc30908.md
+++ b/docs/visual-basic/misc/bc30908.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo ' <typename>' non può ereditare da un tipo annidato al suo interno
+title: Il tipo '<typename>' non può ereditare da un tipo annidato al suo interno
 ms.date: 07/20/2015
 f1_keywords:
 - bc30908
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30908
 ms.assetid: bca164b2-a4a9-4ed4-9f71-a9a5a42f181a
-ms.openlocfilehash: 1721f3613bdea58105f296b6a77816eb2f538017
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: d546dc421d0d6701bf0d9b60486fe0dc19c6fd84
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352761"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408237"
 ---
-# <a name="type-typename-cannot-inherit-from-a-type-nested-within-it"></a>Il tipo ' \<typename >' non può ereditare da un tipo annidato al suo interno
-Una definizione di classe o interfaccia include un'Istruzione [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) che specifica un tipo annidato al suo interno.  
+# <a name="type-typename-cannot-inherit-from-a-type-nested-within-it"></a>Il tipo '\<typename>' non può ereditare da un tipo annidato al suo interno
+Una definizione di classe o interfaccia include un'Istruzione [Inherits Statement](../language-reference/statements/inherits-statement.md) che specifica un tipo annidato al suo interno.  
   
  L'ereditarietà deve essere lineare, non circolare. Un tipo non può ereditare da un tipo che eredita da esso.  
   
@@ -38,7 +38,7 @@ End Class
   
 - Se il tipo che eredita (il tipo esterno nell'annidamento) deve ereditare dal tipo interno, spostare il tipo interno all'esterno di quello esterno.  
   
-- Se il tipo interno deve essere annidato all'interno di quello esterno, il tipo esterno non potrà ereditare da quello interno. Rimuovere l' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md).  
+- Se il tipo interno deve essere annidato all'interno di quello esterno, il tipo esterno non potrà ereditare da quello interno. Rimuovere l' [Inherits Statement](../language-reference/statements/inherits-statement.md).  
   
 ## <a name="see-also"></a>Vedere anche
 
