--- a/docs/visual-basic/misc/bc30949.md
+++ b/docs/visual-basic/misc/bc30949.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto '{}'
+title: Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto ' {} '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30949
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30949
 ms.assetid: b3d27d9c-7a1f-4bac-ad71-388b24b807b3
-ms.openlocfilehash: db669904835540260d69623ea1272638533d9bd7
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: b57d30231c1aff7631b90ebc554c3b26c208612a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352634"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408919"
 ---
-# <a name="array-initializer-cannot-be-specified-for-a-non-constant-dimension-use-the-empty-initializer-"></a>Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto '{}'
+# <a name="array-initializer-cannot-be-specified-for-a-non-constant-dimension-use-the-empty-initializer-"></a>Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto ' {} '
 Una matrice inizializza una dimensione che non è nota in fase di compilazione.  
   
  Il codice seguente genera questo errore.  
@@ -44,7 +44,7 @@ Next i
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For Each...Next](../../visual-basic/language-reference/statements/for-each-next-statement.md)
+- [Istruzione For Each...Next](../language-reference/statements/for-each-next-statement.md)
 - [Matrici in Visual Basic](../programming-guide/language-features/arrays/index.md)
-- [Procedura: Inizializzare una variabile di matrice in Visual Basic](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
+- [Procedura: Inizializzare una variabile di matrice in Visual Basic](../programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
 - [Dimensioni della matrice in Visual Basic](../programming-guide/language-features/arrays/array-dimensions.md)
