--- a/docs/visual-basic/misc/bc31140.md
+++ b/docs/visual-basic/misc/bc31140.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31140
 ms.assetid: e516fb5d-b11b-483b-92d0-ac7064d1841d
-ms.openlocfilehash: bbc1558b2b74106ce2455ad9cac8faae62180d16
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 93932f4bc4d648435f25066a6c2c0a6a2d1458c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619331"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414673"
 ---
 # <a name="custom-modifier-can-only-be-used-immediately-before-an-event-declaration"></a>Il modificatore 'Custom' può essere usato solo immediatamente prima di una dichiarazione 'Event'
 La parola chiave `Custom` deve precedere solo la parola chiave `Event` in una dichiarazione di evento personalizzata.  
@@ -29,5 +29,5 @@ La parola chiave `Custom` deve precedere solo la parola chiave `Event` in una di
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
+- [Events](../programming-guide/language-features/events/index.md)
