commit bilingual contents

--- a/docs/visual-basic/misc/bc30107.md
+++ b/docs/visual-basic/misc/bc30107.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo Enum e non può essere usato come espressione"
+title: "' <typename> ' è un tipo enum e non può essere usato come espressione"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30107
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30107
 ms.assetid: 7bd8b87d-85bf-44e5-84d4-ae6407d21c30
-ms.openlocfilehash: 25a6addde499d42ecd59d64b5ffb2aa90cdf7054
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b120ef515147fac7e4767781b87c071b2ad62c15
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642711"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359413"
 ---
-# <a name="typename-is-an-enum-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="1f066-102">'\<nomeTipo >' è un tipo Enum e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="1f066-102">'\<typename>' is an Enum type and cannot be used as an expression</span></span>
-<span data-ttu-id="1f066-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="1f066-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="1f066-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="1f066-104">An expression must consist of a combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
+# <a name="typename-is-an-enum-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="b28ff-102">' \<typename> ' è un tipo enum e non può essere usato come espressione</span><span class="sxs-lookup"><span data-stu-id="b28ff-102">'\<typename>' is an Enum type and cannot be used as an expression</span></span>
+<span data-ttu-id="b28ff-103">Un nome di tipo viene visualizzato nel punto in cui è richiesta un'espressione.</span><span class="sxs-lookup"><span data-stu-id="b28ff-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="b28ff-104">Un'espressione deve essere costituita da una combinazione di variabili, costanti, valori letterali, proprietà e chiamate di routine `Function` .</span><span class="sxs-lookup"><span data-stu-id="b28ff-104">An expression must consist of a combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
   
- <span data-ttu-id="1f066-105">**ID errore:** BC30107</span><span class="sxs-lookup"><span data-stu-id="1f066-105">**Error ID:** BC30107</span></span>  
+ <span data-ttu-id="b28ff-105">**ID errore:** BC30107</span><span class="sxs-lookup"><span data-stu-id="b28ff-105">**Error ID:** BC30107</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1f066-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1f066-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b28ff-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b28ff-106">To correct this error</span></span>  
   
-- <span data-ttu-id="1f066-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="1f066-107">Remove the type name and construct the expression using valid elements.</span></span>  
+- <span data-ttu-id="b28ff-107">Rimuovere il nome del tipo e costruire l'espressione usando elementi validi.</span><span class="sxs-lookup"><span data-stu-id="b28ff-107">Remove the type name and construct the expression using valid elements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1f066-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1f066-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b28ff-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b28ff-108">See also</span></span>
 
-- [<span data-ttu-id="1f066-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="1f066-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+- [<span data-ttu-id="b28ff-109">Operatori ed espressioni</span><span class="sxs-lookup"><span data-stu-id="b28ff-109">Operators and Expressions</span></span>](../programming-guide/language-features/operators-and-expressions/index.md)
