--- a/docs/visual-basic/misc/bc30815.md
+++ b/docs/visual-basic/misc/bc30815.md
@@ -1,5 +1,5 @@
 ---
-title: "'<functionname>' non è dichiarato (errore Visual Basic)"
+title: "' <functionname> ' non è dichiarato (errore Visual Basic)"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30815
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30815
 ms.assetid: 3ae91dd4-567d-4101-951c-834be77c4f07
-ms.openlocfilehash: 531ce650a0e9fdd5cfcd8b566527069b7709a90b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be5c62713d9345d68cfa40784351b2e20356f3e2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632525"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408380"
 ---
-# <a name="functionname-is-not-declared-visual-basic-error"></a><span data-ttu-id="21c92-102">'\<nomefunzione >' non è dichiarato (errore Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="21c92-102">'\<functionname>' is not declared (Visual Basic Error)</span></span>
-<span data-ttu-id="21c92-103">'\<nomefunzione >' non è dichiarato.</span><span class="sxs-lookup"><span data-stu-id="21c92-103">'\<functionname>' is not declared.</span></span> <span data-ttu-id="21c92-104">La funzionalità di I/O dei file è disponibile nello spazio dei nomi Microsoft.VisualBasic.</span><span class="sxs-lookup"><span data-stu-id="21c92-104">File I/O functionality is available in the Microsoft.VisualBasic namespace.</span></span>  
+# <a name="functionname-is-not-declared-visual-basic-error"></a><span data-ttu-id="ff631-102">' \<functionname> ' non è dichiarato (errore Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="ff631-102">'\<functionname>' is not declared (Visual Basic Error)</span></span>
+<span data-ttu-id="ff631-103">'\<functionname>' non è dichiarato.</span><span class="sxs-lookup"><span data-stu-id="ff631-103">'\<functionname>' is not declared.</span></span> <span data-ttu-id="ff631-104">La funzionalità di I/O dei file è disponibile nello spazio dei nomi Microsoft.VisualBasic.</span><span class="sxs-lookup"><span data-stu-id="ff631-104">File I/O functionality is available in the Microsoft.VisualBasic namespace.</span></span>  
   
- <span data-ttu-id="21c92-105">**ID errore:** BC30815</span><span class="sxs-lookup"><span data-stu-id="21c92-105">**Error ID:** BC30815</span></span>  
+ <span data-ttu-id="ff631-105">**ID errore:** BC30815</span><span class="sxs-lookup"><span data-stu-id="ff631-105">**Error ID:** BC30815</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="21c92-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="21c92-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ff631-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ff631-106">To correct this error</span></span>  
   
-- <span data-ttu-id="21c92-107">Usare le funzioni di I/O definite in `My.Computer.FileSystem`, lo spazio dei nomi `System.IO` , le funzioni di runtime di Visual Basic o l'oggetto `Microsoft.VisualBasic.FileSystem` .</span><span class="sxs-lookup"><span data-stu-id="21c92-107">Use the file I/O functions defined in `My.Computer.FileSystem`, the `System.IO` namespace, Visual Basic run-time functions, or the `Microsoft.VisualBasic.FileSystem` object.</span></span>  
+- <span data-ttu-id="ff631-107">Usare le funzioni di I/O definite in `My.Computer.FileSystem`, lo spazio dei nomi `System.IO` , le funzioni di runtime di Visual Basic o l'oggetto `Microsoft.VisualBasic.FileSystem` .</span><span class="sxs-lookup"><span data-stu-id="ff631-107">Use the file I/O functions defined in `My.Computer.FileSystem`, the `System.IO` namespace, Visual Basic run-time functions, or the `Microsoft.VisualBasic.FileSystem` object.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="21c92-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="21c92-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ff631-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ff631-108">See also</span></span>
 
-- [<span data-ttu-id="21c92-109">Accesso ai file con Visual Basic</span><span class="sxs-lookup"><span data-stu-id="21c92-109">File Access with Visual Basic</span></span>](../../visual-basic/developing-apps/programming/drives-directories-files/file-access.md)
-- [<span data-ttu-id="21c92-110">My.Computer.FileSystem</span><span class="sxs-lookup"><span data-stu-id="21c92-110">My.Computer.FileSystem</span></span>](xref:Microsoft.VisualBasic.FileIO.FileSystem)
+- [<span data-ttu-id="ff631-109">Accesso ai file con Visual Basic</span><span class="sxs-lookup"><span data-stu-id="ff631-109">File Access with Visual Basic</span></span>](../developing-apps/programming/drives-directories-files/file-access.md)
+- [<span data-ttu-id="ff631-110">My. computer. FileSystem</span><span class="sxs-lookup"><span data-stu-id="ff631-110">My.Computer.FileSystem</span></span>](xref:Microsoft.VisualBasic.FileIO.FileSystem)
