--- a/docs/visual-basic/misc/bc30908.md
+++ b/docs/visual-basic/misc/bc30908.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo ' <typename>' non può ereditare da un tipo annidato al suo interno
+title: Il tipo '<typename>' non può ereditare da un tipo annidato al suo interno
 ms.date: 07/20/2015
 f1_keywords:
 - bc30908
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC30908
 ms.assetid: bca164b2-a4a9-4ed4-9f71-a9a5a42f181a
-ms.openlocfilehash: 1721f3613bdea58105f296b6a77816eb2f538017
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: d546dc421d0d6701bf0d9b60486fe0dc19c6fd84
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352761"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408237"
 ---
-# <a name="type-typename-cannot-inherit-from-a-type-nested-within-it"></a><span data-ttu-id="f6d46-102">Il tipo ' \<typename >' non può ereditare da un tipo annidato al suo interno</span><span class="sxs-lookup"><span data-stu-id="f6d46-102">Type '\<typename>' cannot inherit from a type nested within it</span></span>
-<span data-ttu-id="f6d46-103">Una definizione di classe o interfaccia include un'Istruzione [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) che specifica un tipo annidato al suo interno.</span><span class="sxs-lookup"><span data-stu-id="f6d46-103">A class or interface definition includes an [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) that specifies a type nested within it.</span></span>  
+# <a name="type-typename-cannot-inherit-from-a-type-nested-within-it"></a><span data-ttu-id="16ffa-102">Il tipo '\<typename>' non può ereditare da un tipo annidato al suo interno</span><span class="sxs-lookup"><span data-stu-id="16ffa-102">Type '\<typename>' cannot inherit from a type nested within it</span></span>
+<span data-ttu-id="16ffa-103">Una definizione di classe o interfaccia include un'Istruzione [Inherits Statement](../language-reference/statements/inherits-statement.md) che specifica un tipo annidato al suo interno.</span><span class="sxs-lookup"><span data-stu-id="16ffa-103">A class or interface definition includes an [Inherits Statement](../language-reference/statements/inherits-statement.md) that specifies a type nested within it.</span></span>  
   
- <span data-ttu-id="f6d46-104">L'ereditarietà deve essere lineare, non circolare.</span><span class="sxs-lookup"><span data-stu-id="f6d46-104">Inheritance must be linear, not circular.</span></span> <span data-ttu-id="f6d46-105">Un tipo non può ereditare da un tipo che eredita da esso.</span><span class="sxs-lookup"><span data-stu-id="f6d46-105">A type cannot inherit from a type that inherits from it.</span></span>  
+ <span data-ttu-id="16ffa-104">L'ereditarietà deve essere lineare, non circolare.</span><span class="sxs-lookup"><span data-stu-id="16ffa-104">Inheritance must be linear, not circular.</span></span> <span data-ttu-id="16ffa-105">Un tipo non può ereditare da un tipo che eredita da esso.</span><span class="sxs-lookup"><span data-stu-id="16ffa-105">A type cannot inherit from a type that inherits from it.</span></span>  
   
- <span data-ttu-id="f6d46-106">Una restrizione correlata è una relazione in cui un tipo non può ereditare da un tipo non ancora definito.</span><span class="sxs-lookup"><span data-stu-id="f6d46-106">A related restriction is that a type cannot inherit from a type that is not yet defined.</span></span> <span data-ttu-id="f6d46-107">L'ereditarietà presuppone la capacità di riutilizzare membri della classe base, che a sua volta richiede la definizione di questi membri.</span><span class="sxs-lookup"><span data-stu-id="f6d46-107">Inheritance involves the ability to reuse members of the base class, which in turn requires that these members be defined.</span></span> <span data-ttu-id="f6d46-108">Pertanto, Visual Basic non può compilare codice come l'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="f6d46-108">Therefore, Visual Basic cannot compile code such as the following example.</span></span>  
+ <span data-ttu-id="16ffa-106">Una restrizione correlata è una relazione in cui un tipo non può ereditare da un tipo non ancora definito.</span><span class="sxs-lookup"><span data-stu-id="16ffa-106">A related restriction is that a type cannot inherit from a type that is not yet defined.</span></span> <span data-ttu-id="16ffa-107">L'ereditarietà presuppone la capacità di riutilizzare membri della classe base, che a sua volta richiede la definizione di questi membri.</span><span class="sxs-lookup"><span data-stu-id="16ffa-107">Inheritance involves the ability to reuse members of the base class, which in turn requires that these members be defined.</span></span> <span data-ttu-id="16ffa-108">Pertanto, Visual Basic non può compilare codice come l'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="16ffa-108">Therefore, Visual Basic cannot compile code such as the following example.</span></span>  
   
 ```vb  
 Public Class outerClass  
@@ -32,14 +32,14 @@ Public Class outerClass
 End Class  
 ```  
   
- <span data-ttu-id="f6d46-109">**ID errore:** BC30908</span><span class="sxs-lookup"><span data-stu-id="f6d46-109">**Error ID:** BC30908</span></span>  
+ <span data-ttu-id="16ffa-109">**ID errore:** BC30908</span><span class="sxs-lookup"><span data-stu-id="16ffa-109">**Error ID:** BC30908</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f6d46-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f6d46-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="16ffa-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="16ffa-110">To correct this error</span></span>  
   
-- <span data-ttu-id="f6d46-111">Se il tipo che eredita (il tipo esterno nell'annidamento) deve ereditare dal tipo interno, spostare il tipo interno all'esterno di quello esterno.</span><span class="sxs-lookup"><span data-stu-id="f6d46-111">If the inheriting type (the outer type in the nesting) must inherit from the inner type, move the inner type out of the outer type.</span></span>  
+- <span data-ttu-id="16ffa-111">Se il tipo che eredita (il tipo esterno nell'annidamento) deve ereditare dal tipo interno, spostare il tipo interno all'esterno di quello esterno.</span><span class="sxs-lookup"><span data-stu-id="16ffa-111">If the inheriting type (the outer type in the nesting) must inherit from the inner type, move the inner type out of the outer type.</span></span>  
   
-- <span data-ttu-id="f6d46-112">Se il tipo interno deve essere annidato all'interno di quello esterno, il tipo esterno non potrà ereditare da quello interno.</span><span class="sxs-lookup"><span data-stu-id="f6d46-112">If the inner type must be nested within the outer type, the outer type cannot inherit from it.</span></span> <span data-ttu-id="f6d46-113">Rimuovere l' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md).</span><span class="sxs-lookup"><span data-stu-id="f6d46-113">Remove the [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md).</span></span>  
+- <span data-ttu-id="16ffa-112">Se il tipo interno deve essere annidato all'interno di quello esterno, il tipo esterno non potrà ereditare da quello interno.</span><span class="sxs-lookup"><span data-stu-id="16ffa-112">If the inner type must be nested within the outer type, the outer type cannot inherit from it.</span></span> <span data-ttu-id="16ffa-113">Rimuovere l' [Inherits Statement](../language-reference/statements/inherits-statement.md).</span><span class="sxs-lookup"><span data-stu-id="16ffa-113">Remove the [Inherits Statement](../language-reference/statements/inherits-statement.md).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f6d46-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f6d46-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="16ffa-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="16ffa-114">See also</span></span>
 
-- [<span data-ttu-id="f6d46-115">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="f6d46-115">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="16ffa-115">Nozioni fondamentali sull'ereditarietà (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="16ffa-115">Inheritance basics (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
