--- a/docs/visual-basic/misc/bc30135.md
+++ b/docs/visual-basic/misc/bc30135.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30135
 ms.assetid: 099771a1-5bf4-4c16-8fc3-262926c771df
-ms.openlocfilehash: a56fca1f774e111d6544052ef9135a4f621371f6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4c1311dc449c9ce19c9d8086c9348730ad655ec8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651402"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359335"
 ---
-# <a name="synclock-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="cbad6-102">Le istruzioni 'SyncLock' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="cbad6-102">'SyncLock' statements are not valid in the Immediate window</span></span>
-<span data-ttu-id="cbad6-103">L'istruzione `SyncLock` sincronizza i thread e non è consentita in un contesto di debug.</span><span class="sxs-lookup"><span data-stu-id="cbad6-103">The `SyncLock` statement synchronizes threads and is not permitted in a debugging context.</span></span>  
+# <a name="synclock-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="0552f-102">Le istruzioni 'SyncLock' non sono valide nella finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="0552f-102">'SyncLock' statements are not valid in the Immediate window</span></span>
+<span data-ttu-id="0552f-103">L'istruzione `SyncLock` sincronizza i thread e non è consentita in un contesto di debug.</span><span class="sxs-lookup"><span data-stu-id="0552f-103">The `SyncLock` statement synchronizes threads and is not permitted in a debugging context.</span></span>  
   
- <span data-ttu-id="cbad6-104">**ID errore:** BC30135</span><span class="sxs-lookup"><span data-stu-id="cbad6-104">**Error ID:** BC30135</span></span>  
+ <span data-ttu-id="0552f-104">**ID errore:** BC30135</span><span class="sxs-lookup"><span data-stu-id="0552f-104">**Error ID:** BC30135</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cbad6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cbad6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0552f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0552f-105">To correct this error</span></span>  
   
-- <span data-ttu-id="cbad6-106">Non generare un'istruzione `SyncLock` nella finestra di controllo **immediato** .</span><span class="sxs-lookup"><span data-stu-id="cbad6-106">Do not issue a `SyncLock` statement in the **Immediate** window.</span></span>  
+- <span data-ttu-id="0552f-106">Non generare un'istruzione `SyncLock` nella finestra di controllo **immediato** .</span><span class="sxs-lookup"><span data-stu-id="0552f-106">Do not issue a `SyncLock` statement in the **Immediate** window.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cbad6-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cbad6-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0552f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0552f-107">See also</span></span>
 
-- [<span data-ttu-id="cbad6-108">Finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="cbad6-108">Immediate Window</span></span>](/visualstudio/ide/reference/immediate-window)
-- [<span data-ttu-id="cbad6-109">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="cbad6-109">SyncLock Statement</span></span>](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [<span data-ttu-id="0552f-108">Finestra di controllo immediato</span><span class="sxs-lookup"><span data-stu-id="0552f-108">Immediate Window</span></span>](/visualstudio/ide/reference/immediate-window)
+- [<span data-ttu-id="0552f-109">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="0552f-109">SyncLock Statement</span></span>](../language-reference/statements/synclock-statement.md)
