--- a/docs/visual-basic/misc/bc30240.md
+++ b/docs/visual-basic/misc/bc30240.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30240
 ms.assetid: 91078689-f4bf-4331-a475-10bc9fe7cd0c
-ms.openlocfilehash: 3d3ebe8d65687193bacfbd9b253d9617d5581069
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a2a2a31a20d66a66f649ae63275002efff88bafb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64637988"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359296"
 ---
-# <a name="exit-must-be-followed-by-sub-function-property-do-for-while-select-or-try"></a><span data-ttu-id="3a962-102">'Exit' deve essere seguito da 'Sub', 'Function', 'Property', 'Do', 'For', 'While', 'Select' o 'Try'</span><span class="sxs-lookup"><span data-stu-id="3a962-102">'Exit' must be followed by 'Sub', 'Function', 'Property', 'Do', 'For', 'While', 'Select', or 'Try'</span></span>
-<span data-ttu-id="3a962-103">Un'istruzione `Exit` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="3a962-103">An `Exit` statement contains an invalid keyword.</span></span> <span data-ttu-id="3a962-104">`Exit` deve specificare il blocco da cui il controllo viene trasferito all'istruzione che segue il blocco; ad esempio, `End While`.</span><span class="sxs-lookup"><span data-stu-id="3a962-104">`Exit` must specify the block from which control is to be transferred to the statement following the block; for example, `End While`.</span></span>  
+# <a name="exit-must-be-followed-by-sub-function-property-do-for-while-select-or-try"></a><span data-ttu-id="8b582-102">'Exit' deve essere seguito da 'Sub', 'Function', 'Property', 'Do', 'For', 'While', 'Select' o 'Try'</span><span class="sxs-lookup"><span data-stu-id="8b582-102">'Exit' must be followed by 'Sub', 'Function', 'Property', 'Do', 'For', 'While', 'Select', or 'Try'</span></span>
+<span data-ttu-id="8b582-103">Un'istruzione `Exit` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="8b582-103">An `Exit` statement contains an invalid keyword.</span></span> <span data-ttu-id="8b582-104">`Exit` deve specificare il blocco da cui il controllo viene trasferito all'istruzione che segue il blocco; ad esempio, `End While`.</span><span class="sxs-lookup"><span data-stu-id="8b582-104">`Exit` must specify the block from which control is to be transferred to the statement following the block; for example, `End While`.</span></span>  
   
- <span data-ttu-id="3a962-105">**ID errore:** BC30240</span><span class="sxs-lookup"><span data-stu-id="3a962-105">**Error ID:** BC30240</span></span>  
+ <span data-ttu-id="8b582-105">**ID errore:** BC30240</span><span class="sxs-lookup"><span data-stu-id="8b582-105">**Error ID:** BC30240</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3a962-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3a962-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8b582-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8b582-106">To correct this error</span></span>  
   
-- <span data-ttu-id="3a962-107">Aggiungere una parola chiave valida che segue `Exit`o rimuovere l'istruzione `Exit` .</span><span class="sxs-lookup"><span data-stu-id="3a962-107">Add a valid keyword following `Exit`, or remove the `Exit` statement.</span></span>  
+- <span data-ttu-id="8b582-107">Aggiungere una parola chiave valida che segue `Exit`o rimuovere l'istruzione `Exit` .</span><span class="sxs-lookup"><span data-stu-id="8b582-107">Add a valid keyword following `Exit`, or remove the `Exit` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3a962-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3a962-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8b582-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8b582-108">See also</span></span>
 
-- [<span data-ttu-id="3a962-109">Istruzione Exit</span><span class="sxs-lookup"><span data-stu-id="3a962-109">Exit Statement</span></span>](../../visual-basic/language-reference/statements/exit-statement.md)
+- [<span data-ttu-id="8b582-109">Istruzione Exit</span><span class="sxs-lookup"><span data-stu-id="8b582-109">Exit Statement</span></span>](../language-reference/statements/exit-statement.md)
