--- a/docs/visual-basic/misc/bc30242.md
+++ b/docs/visual-basic/misc/bc30242.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in una dichiarazione di metodo"
+title: "' <modifier> ' non valido in una dichiarazione di metodo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30242
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30242
 ms.assetid: 269d7f3d-e1b6-4c10-94f3-a07373d66792
-ms.openlocfilehash: 8534487425e2ddce2354c1688c75257a11998c3a
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 37b2bb329937906aec8208dde2db9d96882e2222
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913560"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359283"
 ---
-# <a name="modifier-is-not-valid-on-a-method-declaration"></a><span data-ttu-id="32f50-102">'\<modificatore >' non è valido in una dichiarazione di metodo</span><span class="sxs-lookup"><span data-stu-id="32f50-102">'\<modifier>' is not valid on a method declaration</span></span>
-<span data-ttu-id="32f50-103">Un'istruzione `Function` o `Sub` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="32f50-103">A `Function` or `Sub` statement contains an invalid keyword.</span></span>  
+# <a name="modifier-is-not-valid-on-a-method-declaration"></a><span data-ttu-id="40178-102">' \<modifier> ' non valido in una dichiarazione di metodo</span><span class="sxs-lookup"><span data-stu-id="40178-102">'\<modifier>' is not valid on a method declaration</span></span>
+<span data-ttu-id="40178-103">Un'istruzione `Function` o `Sub` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="40178-103">A `Function` or `Sub` statement contains an invalid keyword.</span></span>  
   
- <span data-ttu-id="32f50-104">**ID errore:** BC30242</span><span class="sxs-lookup"><span data-stu-id="32f50-104">**Error ID:** BC30242</span></span>  
+ <span data-ttu-id="40178-104">**ID errore:** BC30242</span><span class="sxs-lookup"><span data-stu-id="40178-104">**Error ID:** BC30242</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="32f50-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="32f50-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="40178-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="40178-105">To correct this error</span></span>  
   
-- <span data-ttu-id="32f50-106">Rimuovere la parola chiave non valida dall'istruzione `Function` o `Sub` .</span><span class="sxs-lookup"><span data-stu-id="32f50-106">Remove the invalid keyword from the `Function` or `Sub` statement.</span></span>  
+- <span data-ttu-id="40178-106">Rimuovere la parola chiave non valida dall'istruzione `Function` o `Sub` .</span><span class="sxs-lookup"><span data-stu-id="40178-106">Remove the invalid keyword from the `Function` or `Sub` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="32f50-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="32f50-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="40178-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="40178-107">See also</span></span>
 
-- [<span data-ttu-id="32f50-108">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="32f50-108">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
-- [<span data-ttu-id="32f50-109">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="32f50-109">Sub Statement</span></span>](../../visual-basic/language-reference/statements/sub-statement.md)
+- [<span data-ttu-id="40178-108">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="40178-108">Function Statement</span></span>](../language-reference/statements/function-statement.md)
+- [<span data-ttu-id="40178-109">Istruzione Sub</span><span class="sxs-lookup"><span data-stu-id="40178-109">Sub Statement</span></span>](../language-reference/statements/sub-statement.md)
