--- a/docs/visual-basic/misc/bc30244.md
+++ b/docs/visual-basic/misc/bc30244.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in Declare"
+title: "' <modifier> ' non è valido in una dichiarazione"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30244
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30244
 ms.assetid: 31de75fc-2049-425e-bb94-75d99fc9fdf3
-ms.openlocfilehash: 0ebc6a2689ed731967864ed041d2ff9b46679268
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d4dce68214f0f320c289f6609e9ec9ad7e6eb79a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913426"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359166"
 ---
-# <a name="modifier-is-not-valid-on-a-declare"></a><span data-ttu-id="6c4c7-102">'\<modificatore >' non è valido in Declare</span><span class="sxs-lookup"><span data-stu-id="6c4c7-102">'\<modifier>' is not valid on a Declare</span></span>
-<span data-ttu-id="6c4c7-103">Un'istruzione `Declare` contiene una parola chiave non valida, ad esempio `ReadOnly`.</span><span class="sxs-lookup"><span data-stu-id="6c4c7-103">A `Declare` statement contains an invalid keyword, such as `ReadOnly`.</span></span>  
+# <a name="modifier-is-not-valid-on-a-declare"></a><span data-ttu-id="c743e-102">' \<modifier> ' non è valido in una dichiarazione</span><span class="sxs-lookup"><span data-stu-id="c743e-102">'\<modifier>' is not valid on a Declare</span></span>
+<span data-ttu-id="c743e-103">Un'istruzione `Declare` contiene una parola chiave non valida, ad esempio `ReadOnly`.</span><span class="sxs-lookup"><span data-stu-id="c743e-103">A `Declare` statement contains an invalid keyword, such as `ReadOnly`.</span></span>  
   
- <span data-ttu-id="6c4c7-104">**ID errore:** BC30244</span><span class="sxs-lookup"><span data-stu-id="6c4c7-104">**Error ID:** BC30244</span></span>  
+ <span data-ttu-id="c743e-104">**ID errore:** BC30244</span><span class="sxs-lookup"><span data-stu-id="c743e-104">**Error ID:** BC30244</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6c4c7-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6c4c7-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c743e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c743e-105">To correct this error</span></span>  
   
-- <span data-ttu-id="6c4c7-106">Rimuovere la parola chiave non valida dall'istruzione `Declare` .</span><span class="sxs-lookup"><span data-stu-id="6c4c7-106">Remove the invalid keyword from the `Declare` statement.</span></span>  
+- <span data-ttu-id="c743e-106">Rimuovere la parola chiave non valida dall'istruzione `Declare` .</span><span class="sxs-lookup"><span data-stu-id="c743e-106">Remove the invalid keyword from the `Declare` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6c4c7-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6c4c7-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c743e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c743e-107">See also</span></span>
 
-- [<span data-ttu-id="6c4c7-108">Istruzione Declare</span><span class="sxs-lookup"><span data-stu-id="6c4c7-108">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
+- [<span data-ttu-id="c743e-108">Declare Statement</span><span class="sxs-lookup"><span data-stu-id="c743e-108">Declare Statement</span></span>](../language-reference/statements/declare-statement.md)
