--- a/docs/visual-basic/misc/bc30246.md
+++ b/docs/visual-basic/misc/bc30246.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in una dichiarazione di costante locale"
+title: "' <modifier> ' non valido in una dichiarazione di costante locale"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30246
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30246
 ms.assetid: 1a4a8570-2f04-4a8f-a110-47d97448fb7a
-ms.openlocfilehash: 4d40565e78ebf8016955ee0077803483d16765b4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 07b4b23645d5bffcaa03255f3323f8b29458106e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61766662"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359179"
 ---
-# <a name="modifier-is-not-valid-on-a-local-constant-declaration"></a><span data-ttu-id="9a346-102">'\<modificatore >' non è valido in una dichiarazione di costante locale</span><span class="sxs-lookup"><span data-stu-id="9a346-102">'\<modifier>' is not valid on a local constant declaration</span></span>
-<span data-ttu-id="9a346-103">Un'istruzione `Const` all'interno di una routine contiene una parola chiave non valida, ad esempio `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="9a346-103">A `Const` statement inside a procedure contains an invalid keyword, such as `Overloads`.</span></span>  
+# <a name="modifier-is-not-valid-on-a-local-constant-declaration"></a><span data-ttu-id="453b8-102">' \<modifier> ' non valido in una dichiarazione di costante locale</span><span class="sxs-lookup"><span data-stu-id="453b8-102">'\<modifier>' is not valid on a local constant declaration</span></span>
+<span data-ttu-id="453b8-103">Un'istruzione `Const` all'interno di una routine contiene una parola chiave non valida, ad esempio `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="453b8-103">A `Const` statement inside a procedure contains an invalid keyword, such as `Overloads`.</span></span>  
   
- <span data-ttu-id="9a346-104">**ID errore:** BC30246</span><span class="sxs-lookup"><span data-stu-id="9a346-104">**Error ID:** BC30246</span></span>  
+ <span data-ttu-id="453b8-104">**ID errore:** BC30246</span><span class="sxs-lookup"><span data-stu-id="453b8-104">**Error ID:** BC30246</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9a346-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9a346-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="453b8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="453b8-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="9a346-106">Rimuovere la parola chiave non valida dall'istruzione `Const` .</span><span class="sxs-lookup"><span data-stu-id="9a346-106">Remove the invalid keyword from the `Const` statement.</span></span>  
+1. <span data-ttu-id="453b8-106">Rimuovere la parola chiave non valida dall'istruzione `Const` .</span><span class="sxs-lookup"><span data-stu-id="453b8-106">Remove the invalid keyword from the `Const` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9a346-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9a346-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="453b8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="453b8-107">See also</span></span>
 
-- [<span data-ttu-id="9a346-108">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="9a346-108">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
+- [<span data-ttu-id="453b8-108">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="453b8-108">Const Statement</span></span>](../language-reference/statements/const-statement.md)
