--- a/docs/visual-basic/misc/bc30247.md
+++ b/docs/visual-basic/misc/bc30247.md
@@ -1,5 +1,5 @@
 ---
-title: "'<modifier>' non è valido in una dichiarazione di variabile locale"
+title: "' <modifier> ' non valido in una dichiarazione di variabile locale"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30247
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30247
 ms.assetid: 8c43503c-71a4-47d8-97f7-67658da774b1
-ms.openlocfilehash: 332ea1f83e6406a4ab40019fd150cc4189b2575b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f7728d6adb172088f74cc512d20aea56f1963daf
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64598757"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359153"
 ---
-# <a name="modifier-is-not-valid-on-a-local-variable-declaration"></a><span data-ttu-id="0b525-102">'\<modificatore >' non è valido in una dichiarazione di variabile locale</span><span class="sxs-lookup"><span data-stu-id="0b525-102">'\<modifier>' is not valid on a local variable declaration</span></span>
-<span data-ttu-id="0b525-103">Un'istruzione `Dim` all'interno di una routine contiene una parola chiave non valida, ad esempio `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="0b525-103">A `Dim` statement inside a procedure contains an invalid keyword, such as `Overloads`.</span></span>  
+# <a name="modifier-is-not-valid-on-a-local-variable-declaration"></a><span data-ttu-id="41a4a-102">' \<modifier> ' non valido in una dichiarazione di variabile locale</span><span class="sxs-lookup"><span data-stu-id="41a4a-102">'\<modifier>' is not valid on a local variable declaration</span></span>
+<span data-ttu-id="41a4a-103">Un'istruzione `Dim` all'interno di una routine contiene una parola chiave non valida, ad esempio `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="41a4a-103">A `Dim` statement inside a procedure contains an invalid keyword, such as `Overloads`.</span></span>  
   
- <span data-ttu-id="0b525-104">**ID errore:** BC30247</span><span class="sxs-lookup"><span data-stu-id="0b525-104">**Error ID:** BC30247</span></span>  
+ <span data-ttu-id="41a4a-104">**ID errore:** BC30247</span><span class="sxs-lookup"><span data-stu-id="41a4a-104">**Error ID:** BC30247</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0b525-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0b525-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="41a4a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="41a4a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="0b525-106">Rimuovere la parola chiave non valida dall'istruzione `Dim` .</span><span class="sxs-lookup"><span data-stu-id="0b525-106">Remove the invalid keyword from the `Dim` statement.</span></span>  
+- <span data-ttu-id="41a4a-106">Rimuovere la parola chiave non valida dall'istruzione `Dim` .</span><span class="sxs-lookup"><span data-stu-id="41a4a-106">Remove the invalid keyword from the `Dim` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0b525-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0b525-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="41a4a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="41a4a-107">See also</span></span>
 
-- [<span data-ttu-id="0b525-108">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="0b525-108">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="41a4a-108">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="41a4a-108">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
