--- a/docs/visual-basic/misc/bc30248.md
+++ b/docs/visual-basic/misc/bc30248.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30248
 ms.assetid: fa3bf591-8036-459c-8c29-ed7784e444f6
-ms.openlocfilehash: 14a9663776ced5d19beb4fbeebdee08b41db3af5
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: e913f60edee9c4313c12b9dcfcbdb109b4248133
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027797"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84359140"
 ---
-# <a name="if-elseif-else-end-if-or-const-expected"></a><span data-ttu-id="81048-102">Previsto 'If', 'ElseIf', 'Else', 'End If' o 'Const'</span><span class="sxs-lookup"><span data-stu-id="81048-102">'If', 'ElseIf', 'Else', 'End If', or 'Const' expected</span></span>
-<span data-ttu-id="81048-103">Una riga di origine inizia con un carattere `#` , ma `#`non è seguito direttamente da una direttiva di compilazione condizionale valida.</span><span class="sxs-lookup"><span data-stu-id="81048-103">A source line begins with a `#` character, but a valid conditional compilation directive does not immediately follow the `#`.</span></span> <span data-ttu-id="81048-104">Le direttive valide includono `#Const`, `#ExternalSource`, `#If`, `#Else`, `#ElseIf`, `#End If`e `#Region`.</span><span class="sxs-lookup"><span data-stu-id="81048-104">Valid directives include `#Const`, `#ExternalSource`, `#If`, `#Else`, `#ElseIf`, `#End If`, and `#Region`.</span></span>  
+# <a name="if-elseif-else-end-if-or-const-expected"></a><span data-ttu-id="87672-102">Previsto 'If', 'ElseIf', 'Else', 'End If' o 'Const'</span><span class="sxs-lookup"><span data-stu-id="87672-102">'If', 'ElseIf', 'Else', 'End If', or 'Const' expected</span></span>
+<span data-ttu-id="87672-103">Una riga di origine inizia con un carattere `#` , ma `#`non è seguito direttamente da una direttiva di compilazione condizionale valida.</span><span class="sxs-lookup"><span data-stu-id="87672-103">A source line begins with a `#` character, but a valid conditional compilation directive does not immediately follow the `#`.</span></span> <span data-ttu-id="87672-104">Le direttive valide includono `#Const`, `#ExternalSource`, `#If`, `#Else`, `#ElseIf`, `#End If`e `#Region`.</span><span class="sxs-lookup"><span data-stu-id="87672-104">Valid directives include `#Const`, `#ExternalSource`, `#If`, `#Else`, `#ElseIf`, `#End If`, and `#Region`.</span></span>  
   
- <span data-ttu-id="81048-105">**ID errore:** BC30248</span><span class="sxs-lookup"><span data-stu-id="81048-105">**Error ID:** BC30248</span></span>  
+ <span data-ttu-id="87672-105">**ID errore:** BC30248</span><span class="sxs-lookup"><span data-stu-id="87672-105">**Error ID:** BC30248</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="81048-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="81048-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="87672-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="87672-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="81048-107">Controllare che la direttiva di compilazione condizionale sia stata scritta correttamente.</span><span class="sxs-lookup"><span data-stu-id="81048-107">Make sure the conditional compilation directive is spelled correctly.</span></span>  
+1. <span data-ttu-id="87672-107">Controllare che la direttiva di compilazione condizionale sia stata scritta correttamente.</span><span class="sxs-lookup"><span data-stu-id="87672-107">Make sure the conditional compilation directive is spelled correctly.</span></span>  
   
-2. <span data-ttu-id="81048-108">Verificare che non ci siano spazi tra il carattere `#` e la direttiva.</span><span class="sxs-lookup"><span data-stu-id="81048-108">Make sure there is no intervening space between the `#` character and the directive.</span></span>  
+2. <span data-ttu-id="87672-108">Verificare che non ci siano spazi tra il carattere `#` e la direttiva.</span><span class="sxs-lookup"><span data-stu-id="87672-108">Make sure there is no intervening space between the `#` character and the directive.</span></span>  
   
-3. <span data-ttu-id="81048-109">Rimuovere il carattere `#` oppure aggiungere una direttiva valida subito dopo di esso.</span><span class="sxs-lookup"><span data-stu-id="81048-109">Remove the `#` character or add a valid directive immediately after it.</span></span>  
+3. <span data-ttu-id="87672-109">Rimuovere il carattere `#` oppure aggiungere una direttiva valida subito dopo di esso.</span><span class="sxs-lookup"><span data-stu-id="87672-109">Remove the `#` character or add a valid directive immediately after it.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="81048-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="81048-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="87672-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="87672-110">See also</span></span>
 
-- [<span data-ttu-id="81048-111">Direttive</span><span class="sxs-lookup"><span data-stu-id="81048-111">Directives</span></span>](../../visual-basic/language-reference/directives/index.md)
+- [<span data-ttu-id="87672-111">Direttive</span><span class="sxs-lookup"><span data-stu-id="87672-111">Directives</span></span>](../language-reference/directives/index.md)
