--- a/docs/visual-basic/misc/bc30518.md
+++ b/docs/visual-basic/misc/bc30518.md
@@ -1,5 +1,5 @@
 ---
-title: Non è riuscita perché la risoluzione dell'overload non accessibile '<method>' può essere chiamato con questi argomenti:<error>
+title: "Risoluzione dell'overload non riuscita perché nessun '<method>' accessibile può essere chiamato con questi argomenti: <error>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30518
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30518
 ms.assetid: 0c49fffa-f683-4550-a95b-68b0757a8bbb
-ms.openlocfilehash: e29acbe89efab88b87b91827918c37ae92b47c16
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5999df7e20297d50c10a240a92e4627c7178f645
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64644774"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358906"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-with-these-argumentserror"></a><span data-ttu-id="ca46c-102">Non è riuscita perché la risoluzione dell'overload non accessibile '\<metodo >' può essere chiamato con questi argomenti:\<errore ></span><span class="sxs-lookup"><span data-stu-id="ca46c-102">Overload resolution failed because no accessible '\<method>' can be called with these arguments:\<error></span></span>
-<span data-ttu-id="ca46c-103">È stata effettuata una chiamata a un metodo di overload, ma il compilatore non riesce a trovare un metodo con un elenco di argomenti corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="ca46c-103">You have made a call to an overloaded method, but the compiler cannot find a method with a matching argument list.</span></span>  
+# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-with-these-argumentserror"></a><span data-ttu-id="8520a-102">Risoluzione dell'overload non riuscita perché nessun '\<method>' accessibile può essere chiamato con questi argomenti: \<error></span><span class="sxs-lookup"><span data-stu-id="8520a-102">Overload resolution failed because no accessible '\<method>' can be called with these arguments:\<error></span></span>
+<span data-ttu-id="8520a-103">È stata effettuata una chiamata a un metodo di overload, ma il compilatore non riesce a trovare un metodo con un elenco di argomenti corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="8520a-103">You have made a call to an overloaded method, but the compiler cannot find a method with a matching argument list.</span></span>  
   
- <span data-ttu-id="ca46c-104">**ID errore:** BC30518</span><span class="sxs-lookup"><span data-stu-id="ca46c-104">**Error ID:** BC30518</span></span>  
+ <span data-ttu-id="8520a-104">**ID errore:** BC30518</span><span class="sxs-lookup"><span data-stu-id="8520a-104">**Error ID:** BC30518</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ca46c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ca46c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8520a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8520a-105">To correct this error</span></span>  
   
-- <span data-ttu-id="ca46c-106">Controllare l'elenco di argomenti fornito.</span><span class="sxs-lookup"><span data-stu-id="ca46c-106">Check the argument list you have supplied.</span></span>  
+- <span data-ttu-id="8520a-106">Controllare l'elenco di argomenti fornito.</span><span class="sxs-lookup"><span data-stu-id="8520a-106">Check the argument list you have supplied.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ca46c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ca46c-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8520a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8520a-107">See also</span></span>
 
-- [<span data-ttu-id="ca46c-108">Metodi e proprietà di overload</span><span class="sxs-lookup"><span data-stu-id="ca46c-108">Overloaded Properties and Methods</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [<span data-ttu-id="8520a-108">Metodi e proprietà di overload</span><span class="sxs-lookup"><span data-stu-id="8520a-108">Overloaded Properties and Methods</span></span>](../programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
