--- a/docs/visual-basic/misc/bc30818.md
+++ b/docs/visual-basic/misc/bc30818.md
@@ -1,5 +1,5 @@
 ---
-title: "'<function>' non è dichiarato"
+title: "' <function> ' non è dichiarato"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30818
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30818
 ms.assetid: 5bf784f1-ba14-4fad-aa10-e57256102fb3
-ms.openlocfilehash: 1f053628b98b7ceb2f51ac29714abf0c57f11a5e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 76e7d2d1d958a15cdb19fa0fad198c19224ed9ce
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632435"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408354"
 ---
-# <a name="function-is-not-declared"></a><span data-ttu-id="01442-102">'\<funzione >' non è dichiarato</span><span class="sxs-lookup"><span data-stu-id="01442-102">'\<function>' is not declared</span></span>
-<span data-ttu-id="01442-103">'\<funzione >' non è dichiarato.</span><span class="sxs-lookup"><span data-stu-id="01442-103">'\<function>' is not declared.</span></span> <span data-ttu-id="01442-104">La funzione è stata spostata nello spazio dei nomi Microsoft.VisualBasic.</span><span class="sxs-lookup"><span data-stu-id="01442-104">Function has moved to the Microsoft.VisualBasic namespace.</span></span>  
+# <a name="function-is-not-declared"></a><span data-ttu-id="9a8b7-102">' \<function> ' non è dichiarato</span><span class="sxs-lookup"><span data-stu-id="9a8b7-102">'\<function>' is not declared</span></span>
+<span data-ttu-id="9a8b7-103">'\<function>' non è dichiarato.</span><span class="sxs-lookup"><span data-stu-id="9a8b7-103">'\<function>' is not declared.</span></span> <span data-ttu-id="9a8b7-104">La funzione è stata spostata nello spazio dei nomi Microsoft.VisualBasic.</span><span class="sxs-lookup"><span data-stu-id="9a8b7-104">Function has moved to the Microsoft.VisualBasic namespace.</span></span>  
   
- <span data-ttu-id="01442-105">**ID errore:** BC30818</span><span class="sxs-lookup"><span data-stu-id="01442-105">**Error ID:** BC30818</span></span>  
+ <span data-ttu-id="9a8b7-105">**ID errore:** BC30818</span><span class="sxs-lookup"><span data-stu-id="9a8b7-105">**Error ID:** BC30818</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="01442-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="01442-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9a8b7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9a8b7-106">To correct this error</span></span>  
   
-- <span data-ttu-id="01442-107">Usare la funzione appropriata dallo spazio dei nomi `Microsoft.VisualBasic` .</span><span class="sxs-lookup"><span data-stu-id="01442-107">Use the appropriate function from the `Microsoft.VisualBasic` namespace.</span></span>  
+- <span data-ttu-id="9a8b7-107">Usare la funzione appropriata dallo spazio dei nomi `Microsoft.VisualBasic` .</span><span class="sxs-lookup"><span data-stu-id="9a8b7-107">Use the appropriate function from the `Microsoft.VisualBasic` namespace.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="01442-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="01442-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9a8b7-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9a8b7-108">See also</span></span>
 
-- [<span data-ttu-id="01442-109">Membri della libreria di runtime di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="01442-109">Visual Basic Runtime Library Members</span></span>](../../visual-basic/language-reference/runtime-library-members.md)
+- [<span data-ttu-id="9a8b7-109">Membri della libreria di runtime di Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9a8b7-109">Visual Basic Runtime Library Members</span></span>](../language-reference/runtime-library-members.md)
