--- a/docs/visual-basic/misc/bc30944.md
+++ b/docs/visual-basic/misc/bc30944.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30944
 ms.assetid: 1f7ed4a1-6ff5-4836-8424-21618c68ff45
-ms.openlocfilehash: 559df483185948a8f407fc5c7c0846e6a588cd27
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5642dc1f0cf053ee057e121c7647a1a203c2909b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621867"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408971"
 ---
-# <a name="syntax-error-in-cast-operator-two-arguments-separated-by-comma-are-required"></a><span data-ttu-id="3094c-102">Errore di sintassi nell'operatore di cast: sono necessari due argomenti separati da virgola</span><span class="sxs-lookup"><span data-stu-id="3094c-102">Syntax error in cast operator; two arguments separated by comma are required</span></span>
-<span data-ttu-id="3094c-103">Un'espressione usa la funzione di conversione `CType` o la parola chiave di conversione `DirectCast` o `TryCast` , ma fornisce un solo argomento.</span><span class="sxs-lookup"><span data-stu-id="3094c-103">An expression uses the `CType` conversion function or the `DirectCast` or `TryCast` conversion keyword but supplies only one argument.</span></span>  
+# <a name="syntax-error-in-cast-operator-two-arguments-separated-by-comma-are-required"></a><span data-ttu-id="2082c-102">Errore di sintassi nell'operatore di cast: sono necessari due argomenti separati da virgola</span><span class="sxs-lookup"><span data-stu-id="2082c-102">Syntax error in cast operator; two arguments separated by comma are required</span></span>
+<span data-ttu-id="2082c-103">Un'espressione usa la funzione di conversione `CType` o la parola chiave di conversione `DirectCast` o `TryCast` , ma fornisce un solo argomento.</span><span class="sxs-lookup"><span data-stu-id="2082c-103">An expression uses the `CType` conversion function or the `DirectCast` or `TryCast` conversion keyword but supplies only one argument.</span></span>  
   
- <span data-ttu-id="3094c-104">`CType`, `DirectCast`e `TryCast` richiedono due argomenti.</span><span class="sxs-lookup"><span data-stu-id="3094c-104">`CType`, `DirectCast`, and `TryCast` all require two arguments.</span></span> <span data-ttu-id="3094c-105">Il primo è l'espressione da convertire e il secondo il tipo di dati o il tipo di classe in cui convertirla.</span><span class="sxs-lookup"><span data-stu-id="3094c-105">The first is an expression to be converted and the second is the data type or class type to which to convert it.</span></span>  
+ <span data-ttu-id="2082c-104">`CType`, `DirectCast`e `TryCast` richiedono due argomenti.</span><span class="sxs-lookup"><span data-stu-id="2082c-104">`CType`, `DirectCast`, and `TryCast` all require two arguments.</span></span> <span data-ttu-id="2082c-105">Il primo è l'espressione da convertire e il secondo il tipo di dati o il tipo di classe in cui convertirla.</span><span class="sxs-lookup"><span data-stu-id="2082c-105">The first is an expression to be converted and the second is the data type or class type to which to convert it.</span></span>  
   
- <span data-ttu-id="3094c-106">**ID errore:** BC30944</span><span class="sxs-lookup"><span data-stu-id="3094c-106">**Error ID:** BC30944</span></span>  
+ <span data-ttu-id="2082c-106">**ID errore:** BC30944</span><span class="sxs-lookup"><span data-stu-id="2082c-106">**Error ID:** BC30944</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3094c-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3094c-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2082c-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2082c-107">To correct this error</span></span>  
   
-- <span data-ttu-id="3094c-108">Fornire entrambi gli argomenti richiesti per la conversione.</span><span class="sxs-lookup"><span data-stu-id="3094c-108">Supply both arguments as required for the conversion.</span></span>  
+- <span data-ttu-id="2082c-108">Fornire entrambi gli argomenti richiesti per la conversione.</span><span class="sxs-lookup"><span data-stu-id="2082c-108">Supply both arguments as required for the conversion.</span></span>  
   
-- <span data-ttu-id="3094c-109">Per usare una delle specifiche [CString](../../visual-basic/language-reference/functions/type-conversion-functions.md) , come `CString`, è necessario usare il nome della funzione anziché `CType`.</span><span class="sxs-lookup"><span data-stu-id="3094c-109">If you intend to use one of the specific [Type Conversion Functions](../../visual-basic/language-reference/functions/type-conversion-functions.md) such as `CString`, you must use that function name instead of `CType`.</span></span> <span data-ttu-id="3094c-110">In questo caso è richiesto un solo argomento.</span><span class="sxs-lookup"><span data-stu-id="3094c-110">Then only one argument is required.</span></span>  
+- <span data-ttu-id="2082c-109">Per usare una delle specifiche [CString](../language-reference/functions/type-conversion-functions.md) , come `CString`, è necessario usare il nome della funzione anziché `CType`.</span><span class="sxs-lookup"><span data-stu-id="2082c-109">If you intend to use one of the specific [Type Conversion Functions](../language-reference/functions/type-conversion-functions.md) such as `CString`, you must use that function name instead of `CType`.</span></span> <span data-ttu-id="2082c-110">In questo caso è richiesto un solo argomento.</span><span class="sxs-lookup"><span data-stu-id="2082c-110">Then only one argument is required.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3094c-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3094c-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2082c-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2082c-111">See also</span></span>
 
-- [<span data-ttu-id="3094c-112">Funzione CType</span><span class="sxs-lookup"><span data-stu-id="3094c-112">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
-- [<span data-ttu-id="3094c-113">Operatore DirectCast</span><span class="sxs-lookup"><span data-stu-id="3094c-113">DirectCast Operator</span></span>](../../visual-basic/language-reference/operators/directcast-operator.md)
-- [<span data-ttu-id="3094c-114">Operatore TryCast</span><span class="sxs-lookup"><span data-stu-id="3094c-114">TryCast Operator</span></span>](../../visual-basic/language-reference/operators/trycast-operator.md)
-- [<span data-ttu-id="3094c-115">Funzioni di conversione del tipo</span><span class="sxs-lookup"><span data-stu-id="3094c-115">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+- [<span data-ttu-id="2082c-112">CType Function</span><span class="sxs-lookup"><span data-stu-id="2082c-112">CType Function</span></span>](../language-reference/functions/ctype-function.md)
+- [<span data-ttu-id="2082c-113">Operatore DirectCast</span><span class="sxs-lookup"><span data-stu-id="2082c-113">DirectCast Operator</span></span>](../language-reference/operators/directcast-operator.md)
+- [<span data-ttu-id="2082c-114">Operatore TryCast</span><span class="sxs-lookup"><span data-stu-id="2082c-114">TryCast Operator</span></span>](../language-reference/operators/trycast-operator.md)
+- [<span data-ttu-id="2082c-115">CString</span><span class="sxs-lookup"><span data-stu-id="2082c-115">Type Conversion Functions</span></span>](../language-reference/functions/type-conversion-functions.md)
