--- a/docs/visual-basic/misc/bc30949.md
+++ b/docs/visual-basic/misc/bc30949.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto '{}'
+title: Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto ' {} '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30949
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30949
 ms.assetid: b3d27d9c-7a1f-4bac-ad71-388b24b807b3
-ms.openlocfilehash: db669904835540260d69623ea1272638533d9bd7
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: b57d30231c1aff7631b90ebc554c3b26c208612a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352634"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408919"
 ---
-# <a name="array-initializer-cannot-be-specified-for-a-non-constant-dimension-use-the-empty-initializer-"></a><span data-ttu-id="36bec-102">Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto '{}'</span><span class="sxs-lookup"><span data-stu-id="36bec-102">Array initializer cannot be specified for a non constant dimension; use the empty initializer '{}'</span></span>
-<span data-ttu-id="36bec-103">Una matrice inizializza una dimensione che non è nota in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="36bec-103">An array initializes a dimension that is not known at compile time.</span></span>  
+# <a name="array-initializer-cannot-be-specified-for-a-non-constant-dimension-use-the-empty-initializer-"></a><span data-ttu-id="4eb4c-102">Non è possibile specificare l'inizializzatore di matrice per una dimensione non costante. Usa l'inizializzatore vuoto ' {} '</span><span class="sxs-lookup"><span data-stu-id="4eb4c-102">Array initializer cannot be specified for a non constant dimension; use the empty initializer '{}'</span></span>
+<span data-ttu-id="4eb4c-103">Una matrice inizializza una dimensione che non è nota in fase di compilazione.</span><span class="sxs-lookup"><span data-stu-id="4eb4c-103">An array initializes a dimension that is not known at compile time.</span></span>  
   
- <span data-ttu-id="36bec-104">Il codice seguente genera questo errore.</span><span class="sxs-lookup"><span data-stu-id="36bec-104">The following code generates this error.</span></span>  
+ <span data-ttu-id="4eb4c-104">Il codice seguente genera questo errore.</span><span class="sxs-lookup"><span data-stu-id="4eb4c-104">The following code generates this error.</span></span>  
   
 ```vb  
 Dim j As Integer  
 Dim intArray As Integer = New Integer(1, j) {{0, 100}, {1,101}}  
 ```  
   
- <span data-ttu-id="36bec-105">Il codice seguente consente di evitare l'errore.</span><span class="sxs-lookup"><span data-stu-id="36bec-105">The following code avoids the error.</span></span>  
+ <span data-ttu-id="4eb4c-105">Il codice seguente consente di evitare l'errore.</span><span class="sxs-lookup"><span data-stu-id="4eb4c-105">The following code avoids the error.</span></span>  
   
 ```vb  
 Dim intArray As Integer = New Integer(1, j) {}  
@@ -34,17 +34,17 @@ For i As Integer = 0 To j
 Next i  
 ```  
   
- <span data-ttu-id="36bec-106">**ID errore:** BC30949</span><span class="sxs-lookup"><span data-stu-id="36bec-106">**Error ID:** BC30949</span></span>  
+ <span data-ttu-id="4eb4c-106">**ID errore:** BC30949</span><span class="sxs-lookup"><span data-stu-id="4eb4c-106">**Error ID:** BC30949</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="36bec-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="36bec-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4eb4c-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4eb4c-107">To correct this error</span></span>  
   
-- <span data-ttu-id="36bec-108">Se possibile, specificare una dimensione costante nella dichiarazione di matrice.</span><span class="sxs-lookup"><span data-stu-id="36bec-108">If possible, specify a constant dimension in the array declaration.</span></span>  
+- <span data-ttu-id="4eb4c-108">Se possibile, specificare una dimensione costante nella dichiarazione di matrice.</span><span class="sxs-lookup"><span data-stu-id="4eb4c-108">If possible, specify a constant dimension in the array declaration.</span></span>  
   
-- <span data-ttu-id="36bec-109">Se non è possibile specificare una dimensione costante, è necessario inizializzare la matrice con un ciclo quando la dimensione non costante diventa nota.</span><span class="sxs-lookup"><span data-stu-id="36bec-109">If you cannot specify a constant dimension, then you must initialize the array using a loop when the nonconstant dimension becomes known.</span></span>  
+- <span data-ttu-id="4eb4c-109">Se non è possibile specificare una dimensione costante, è necessario inizializzare la matrice con un ciclo quando la dimensione non costante diventa nota.</span><span class="sxs-lookup"><span data-stu-id="4eb4c-109">If you cannot specify a constant dimension, then you must initialize the array using a loop when the nonconstant dimension becomes known.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="36bec-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="36bec-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4eb4c-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4eb4c-110">See also</span></span>
 
-- [<span data-ttu-id="36bec-111">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="36bec-111">For Each...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-each-next-statement.md)
-- [<span data-ttu-id="36bec-112">Matrici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="36bec-112">Arrays in Visual Basic</span></span>](../programming-guide/language-features/arrays/index.md)
-- [<span data-ttu-id="36bec-113">Procedura: Inizializzare una variabile di matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="36bec-113">How to: Initialize an Array Variable in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
-- [<span data-ttu-id="36bec-114">Dimensioni della matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="36bec-114">Array dimensions in Visual Basic</span></span>](../programming-guide/language-features/arrays/array-dimensions.md)
+- [<span data-ttu-id="4eb4c-111">Istruzione For Each...Next</span><span class="sxs-lookup"><span data-stu-id="4eb4c-111">For Each...Next Statement</span></span>](../language-reference/statements/for-each-next-statement.md)
+- [<span data-ttu-id="4eb4c-112">Matrici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4eb4c-112">Arrays in Visual Basic</span></span>](../programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="4eb4c-113">Procedura: Inizializzare una variabile di matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4eb4c-113">How to: Initialize an Array Variable in Visual Basic</span></span>](../programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)
+- [<span data-ttu-id="4eb4c-114">Dimensioni della matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4eb4c-114">Array dimensions in Visual Basic</span></span>](../programming-guide/language-features/arrays/array-dimensions.md)
