--- a/docs/visual-basic/misc/bc31140.md
+++ b/docs/visual-basic/misc/bc31140.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC31140
 ms.assetid: e516fb5d-b11b-483b-92d0-ac7064d1841d
-ms.openlocfilehash: bbc1558b2b74106ce2455ad9cac8faae62180d16
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 93932f4bc4d648435f25066a6c2c0a6a2d1458c3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619331"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414673"
 ---
-# <a name="custom-modifier-can-only-be-used-immediately-before-an-event-declaration"></a><span data-ttu-id="52200-102">Il modificatore 'Custom' può essere usato solo immediatamente prima di una dichiarazione 'Event'</span><span class="sxs-lookup"><span data-stu-id="52200-102">'Custom' modifier can only be used immediately before an 'Event' declaration</span></span>
-<span data-ttu-id="52200-103">La parola chiave `Custom` deve precedere solo la parola chiave `Event` in una dichiarazione di evento personalizzata.</span><span class="sxs-lookup"><span data-stu-id="52200-103">The `Custom` keyword must precede only the `Event` keyword in a custom event declaration.</span></span>  
+# <a name="custom-modifier-can-only-be-used-immediately-before-an-event-declaration"></a><span data-ttu-id="8e3cd-102">Il modificatore 'Custom' può essere usato solo immediatamente prima di una dichiarazione 'Event'</span><span class="sxs-lookup"><span data-stu-id="8e3cd-102">'Custom' modifier can only be used immediately before an 'Event' declaration</span></span>
+<span data-ttu-id="8e3cd-103">La parola chiave `Custom` deve precedere solo la parola chiave `Event` in una dichiarazione di evento personalizzata.</span><span class="sxs-lookup"><span data-stu-id="8e3cd-103">The `Custom` keyword must precede only the `Event` keyword in a custom event declaration.</span></span>  
   
- <span data-ttu-id="52200-104">**ID errore:** BC31140</span><span class="sxs-lookup"><span data-stu-id="52200-104">**Error ID:** BC31140</span></span>  
+ <span data-ttu-id="8e3cd-104">**ID errore:** BC31140</span><span class="sxs-lookup"><span data-stu-id="8e3cd-104">**Error ID:** BC31140</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="52200-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="52200-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8e3cd-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8e3cd-105">To correct this error</span></span>  
   
-- <span data-ttu-id="52200-106">Spostare la parola chiave `Custom` in modo che preceda la parola chiave `Event` .</span><span class="sxs-lookup"><span data-stu-id="52200-106">Move the `Custom` keyword to precede the `Event` keyword.</span></span>  
+- <span data-ttu-id="8e3cd-106">Spostare la parola chiave `Custom` in modo che preceda la parola chiave `Event` .</span><span class="sxs-lookup"><span data-stu-id="8e3cd-106">Move the `Custom` keyword to precede the `Event` keyword.</span></span>  
   
-     <span data-ttu-id="52200-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="52200-107">—or—</span></span>  
+     <span data-ttu-id="8e3cd-107">-oppure-</span><span class="sxs-lookup"><span data-stu-id="8e3cd-107">—or—</span></span>  
   
-- <span data-ttu-id="52200-108">Rimuovere la parola chiave `Custom` .</span><span class="sxs-lookup"><span data-stu-id="52200-108">Remove the `Custom` keyword.</span></span>  
+- <span data-ttu-id="8e3cd-108">Rimuovere la parola chiave `Custom` .</span><span class="sxs-lookup"><span data-stu-id="8e3cd-108">Remove the `Custom` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="52200-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="52200-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8e3cd-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8e3cd-109">See also</span></span>
 
-- [<span data-ttu-id="52200-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="52200-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="52200-111">Eventi</span><span class="sxs-lookup"><span data-stu-id="52200-111">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="8e3cd-110">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="8e3cd-110">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="8e3cd-111">Events</span><span class="sxs-lookup"><span data-stu-id="8e3cd-111">Events</span></span>](../programming-guide/language-features/events/index.md)
